[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    eosio-go = gscdk:run_tinygo
    tinygo-dlltool = gscdk:run_dlltool
    tinygo-ranlib = gscdk:run_ranlib
    tinygo-lib = gscdk:run_lib
    tinygo-ar = gscdk:run_ar


